# Ephemeral-Vault

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
.github/workflows/: backend-ci.yml
backend/: .env.example  .env.production.example  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/migrations/: 20260310185010_init_schema.sql  20260717000000_prod_constraints.sql  session.sql
backend/src/: auto_deposit.rs  config.rs  db.rs  delegation.rs  error.rs  key_memory.rs  lib.rs  main.rs  session_manager.rs  signer.rs  state.rs  vault_monitor.rs
backend/src/auto_deposit/: calculator.rs
backend/src/db/: models.rs  queries.rs
backend/src/delegation/: mod.rs
backend/src/handlers/: mod.rs
backend/src/monitor/: mod.rs
backend/src/routes/: mod.rs
backend/src/session/: encryption.rs  manager.rs  mod.rs
backend/src/signer/: mod.rs
backend/src/solana/: mod.rs
client/: README.md  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/create/: page.tsx
client/app/dashboard/: page.tsx
client/components/common/: Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Navbar.tsx  Toast.tsx
client/components/modals/: DepositModal.tsx  PauseModal.tsx  RevokeModal.tsx  WithdrawModal.tsx
client/components/trading/: ActivityChart.tsx  TradeHistory.tsx
client/components/vault/: SessionManager.tsx  VaultOverview.tsx
client/components/wallet/: WalletButton.tsx
client/contexts/: NotificationContext.tsx  VaultContext.tsx
client/lib/: api.ts  mock.ts  types.ts
client/provider/: SolanaProvider.tsx
programs/ephemeralvault/: Cargo.toml
programs/ephemeralvault/src/: lib.rs
scripts/: e2e-backend.js  e2e-backend.sh
tests/: ephemeralvault.ts
