[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Solana
solana-sdk = "1.18.26"
solana-client = "1.18.26"
solana-account-decoder = "1.18.26"

# Anchor (match Solana 1.18)
anchor-client = "0.29.0"
anchor-lang = "0.29.0"

# Database
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
    "macros",
] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

dotenv = "0.15"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Encoding utilities
base64 = "0.22"
bs58 = "0.5"
