[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Solana
solana-sdk = "1.18.26"
solana-client = "1.18.26"
anchor-lang = "0.32.1"
ephemeralvault = { package = "ephemeral_vault", path = "../programs/ephemeralvault", features = ["no-entrypoint"] }

# Database
sqlx = { version = "0.6.3", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
    "macros",
    "migrate",
] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "=0.3.36"

dotenv = "0.15"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Encoding utilities
base64 = "0.22"
bs58 = "0.5"

# Anchor-compatible instruction/account codecs (without anchor-client)
borsh = "1.5"
sha2 = "0.10"
bincode = "1.3"
